--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,7 +3,7 @@
 
 :root {
     /* --main-color: #29a396; */
-    --main-color: rgba(255, 0, 0, 0.648);
+    --main-color:hsl(0,95%,65%);
     --primary-color: white;
 }
 
@@ -12,7 +12,6 @@ body {
 }
 
 .header {
-    border-bottom: 2px solid hsl(0, 0%, 100%);
     background-color: black;
 }
 
@@ -23,10 +22,6 @@ body {
 #logo{
     width:150px;
     height:45px;
-}
-
-.hr {
-    color: #fff;
 }
 
 .dropdown-toggle::after {
@@ -40,7 +35,7 @@ body {
 }
 
 button{
-    background-color: #fff !important;
+    background-color: var(--primary-color) !important;
     border: 2px solid var(--main-color) !important;
     outline: var(--main-color) !important;
     color:var(--main-color) !important;
@@ -76,16 +71,15 @@ video{
 }
 
 #banner-1 {
-    padding-top: 8rem;
-    padding-bottom: 8rem;
     justify-content: center;
+    align-items: center;
     position: relative;
     max-width: 100%;
+    height: 610px;
 }
 
 #banner-1 .content {
     width: 80%;
-    min-width: 40%;
 }
 
 #banner-1 .content h4 {
@@ -172,68 +166,37 @@ video{
 
 /* section-3 */
 
-#banner-3 {
-    flex-direction: column;
-    background-color: #111317;
-    max-width :100%;
-    padding: 2rem 0;
-}
-
-#banner-3 .image {
-    width: inherit;
+#banner-3{
     position: relative;
-    margin-bottom: 3rem;
-}
-
-#banner-3 .image img {
-    width: inherit;
-    opacity: 0.6;
-    border-radius: 10px;
-}
-
-#banner-3 .image span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: auto;
-    transform: translateX(-50%) translateY(-50%);
-    color: white;
-}
-
-#banner-3 .content-links {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+    height: 700px;
+    max-width: 100%;
+    margin-top: 8rem;
 }
 
-#banner-3 .content-links .image-link {
-    width: 45%;
-    height: 320px;
-    /* border: solid 1px white; */
-    border-radius: 16px;
-    overflow: hidden;
-    position: relative;
+#banner-3 .image{
+    position: absolute;
+    top:0;
+    left:0;
+    width:inherit;
+    height:inherit;
+    background-color: #111317;
+    z-index: -1;
 }
-
-
-#banner-3 .content-links .image-link a {
-    border-radius: inherit;
-}
-
-#banner-3 .content-links .imagelink a img {
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-    size: cover;
+#banner-3 .image img{
+    width:inherit;
+    height: inherit;
+    object-fit: cover;
+    object-position: center;
     opacity: 0.5;
 }
 
-#banner-3 .content-links .image-link span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    color: white;
-    transform: translateX(-50%);
+#banner-3 .content{
+    color:white;
+    text-align: center;
 }
 
 /* section-4 */
@@ -279,41 +242,7 @@ video{
 
 
 /* section-5 */
-
-#banner-5 {
-    display: flex;
-    justify-content: center;
-    gap: 1.5rem;
-    flex-wrap: wrap;
-    max-width: 100%;
-    background-color: #111317;
-    margin-bottom: 0;
-    padding:5rem 0;
-}
-
-#banner-5 .image {
-    width: 460px;
-    height: 350px;
-    border-radius: 16px;
-}
-
-#banner-5 .image img {
-    width: inherit;
-    height: inherit;
-    overflow: hidden;
-    border-radius: inherit;
-}
-
-#banner-5 .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 560px;
-}
-
-/* banner-6 */
-
-#banner-6{
+#banner-5{
     position: relative;
     display: flex;
     justify-content: center;
@@ -324,7 +253,7 @@ video{
     margin-top: 8rem;
 }
 
-#banner-6 .image{
+#banner-5 .image{
     position: absolute;
     top:0;
     left:0;
@@ -333,20 +262,67 @@ video{
     background-color: #111317;
     z-index: -1;
 }
-#banner-6 .image img{
+#banner-5 .image img{
     width:inherit;
     height: inherit;
     object-fit: cover;
     object-position: center;
-    opacity: 0.5;
+    opacity: 0.4;
 }
 
-#banner-6 .content{
+#banner-5 .content{
     color:white;
     text-align: center;
 }
 
+/*section-6*/
 
+#banner-6{
+    flex-direction: column;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
+
+#banner-6 .heading{
+    align-items: center;
+}
+
+#banner-6 .slider{
+    width:inherit;
+}
+
+#banner-6 .slider[data-animated="true"]{
+    overflow: hidden;
+}
+
+#banner-6 .slider[data-animated="true"] .slide-track{
+    flex-wrap: nowrap;
+    animation: scroll 20s linear infinite;
+}
+
+#banner-6 .slider .slide{
+    display:flex;
+    height:200px;
+    width:500px;
+    padding:5rem;
+}
+
+.slide figure img{
+    width:150px;
+}
+
+#banner-6 .slider .slide-track{
+    display:flex;
+    flex-wrap: wrap;
+    padding-block:1rem;
+    gap:2rem;
+}    
+
+@keyframes scroll{
+    to{
+        transform:translate(-114.4%);
+    }    
+}  
 
 
 /* responsive */
@@ -357,10 +333,6 @@ video{
     } */
 
     #banner-1 .content {
-        width: 100%;
-    }
-
-    #banner-1 .image {
         width: 100%;
     }
 
@@ -393,11 +365,12 @@ video{
         line-height: 2rem;
         color: var(--white);
     }
-
-    #banner-3 .content-links .image-link {
-        width: 100%;
-        height: 400px;
-        margin-bottom: 2rem;
+    #banner-6 .slider[data-animated="true"] .slide-track{
+        animation: scroll 17s linear infinite;
+    }
+    #banner-6 .slider .slide{
+        padding-left:1rem;
+        padding-right:1rem;
     }
 }
 
@@ -409,17 +382,9 @@ video{
         width: 100%;
         transform: translateX(0%) translateY(0%);
     }
-
-    #banner-5 .image {
-        width: 360px;
-        height: 250px;
-    }
 }
 
 @media(max-width:360px) {
-    #banner-1 .image img {
-        width: 280px;
-    }
 
     #banner-1 .content h1 {
         font-size: 2.5rem;
@@ -427,26 +392,10 @@ video{
     }
 
     #banner-2 .image {
-        width: 280px;
+        width: 278px;
         height: 150px;
         border-radius: 20px;
         position: relative;
-        padding-bottom: 10px;
-    }
-
-    #banner-3 .content-links .image-link {
-        width: 100%;
-        height: 280px;
-    }
-
-    #banner-3 .content-links .image-link img {
-        width: 100%;
-        height: 280px;
-    }
-
-    #banner-5 .image {
-        width: 280px;
-        height: 170px;
     }
 }
 
