--- a/public/css/register.css
+++ b/public/css/register.css
@@ -11,7 +11,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #4070f4;
+    /* background: #4070f4; */
+    background: url('https://images.unsplash.com/photo-1517836357463-d25dfeac3438?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .container {
@@ -19,8 +23,7 @@ body {
     max-width: 900px;
     width: 100%;
     border-radius: 6px;
-    padding: 30px;
-    margin: 0 15px;
+    padding: 30px 30px 0 30px;
     background-color: #fff;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
@@ -38,7 +41,7 @@ body {
     left: 0;
     bottom: -2px;
     height: 3px;
-    width: 27px;
+    width: 50px;
     border-radius: 8px;
     background-color: #4070f4;
 }
@@ -104,7 +107,8 @@ form .fields .input-field {
     color: #2e2e2e;
 }
 
-.input-field input {
+.input-field input,
+.input-field select {
     outline: none;
     font-size: 14px;
     font-weight: 400;
