--- a/public/css/global.css
+++ b/public/css/global.css
@@ -18,7 +18,7 @@
 
 :root {
     /* Primary-color-hue --> (Blue(252), Yellow(52), Red(352), Green(152), Light-BLue(202) */
-    --primary-color-hue: 252;
+    --primary-color-hue: 352;
     /* For Light Background --> (Light(95%), Dark(17%), White(100%) */
     /* For Dark Blue Background --> (Light(15%), Dark(95%), White(20%) */
     /* For Dark Background --> (Light(0%), Dark(95%), White(10%) */
@@ -35,6 +35,14 @@
     --color-danger: hsl(0, 95%, 65%);
     --color-dark: hsl(252, 30%, var(--dark-color-lightness));
     --color-black: hsl(252, 30%, 10%);
+}
+
+.active {
+    color: var(--color-primary)!important;
+}
+
+.nav-link:hover {
+    color: var(--color-primary)!important;
 }
 
 .bttn {
@@ -74,12 +82,55 @@
     # Header
 \*-----------------------------------*/
 
+#main-logo {
+    height: 45px;
+    width: 95px;
+}
+
+#main-logo img {
+    height: 100%;
+    width: 100%;
+}
+
+.dropdown-menu[data-bs-popper] {
+    left: -94%!important;
+}
 
 /*-----------------------------------*\
     # Modal
 \*-----------------------------------*/
 
+.modal-body a {
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: var(--color-primary);
+    text-decoration: none;
+    text-align: center;
+}
+
+.modal-footer a {
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--color-primary);
+    text-decoration: none;
+}
 
 /*-----------------------------------*\
     # Footer
 \*-----------------------------------*/
+
+.footer-heading {
+    text-decoration: none;
+}
+
+.footer-heading h3 {
+    color: var(--color-primary);
+}
+
+.footer-body h5 {
+    color: var(--color-primary);
+}
+
+.footer-body a:hover {
+    color: var(--color-primary)!important;
+}
