--- a/public/css/home.css
+++ b/public/css/home.css
@@ -34,19 +34,19 @@ body {
     margin-bottom: 5rem;
 }
 
-button{
-    background-color: var(--primary-color) !important;
-    border: 2px solid var(--main-color) !important;
-    outline: var(--main-color) !important;
-    color:var(--main-color) !important;
+/* button{
+    background-color: var(--primary-color);
+    border: 2px solid var(--main-color);
+    outline: var(--main-color);
+    color:var(--main-color);
 }
 
 .banner-button button {
     background-color: var(--main-color);
     color: black;
-    width: fit-content !important;
-    font-weight: 600 !important;
-}
+    width: fit-content;
+    font-weight: 600;
+} */
 
 .heading {
     text-align: center;
