--- a/public/css/home.css
+++ b/public/css/home.css
@@ -19,10 +19,10 @@ body {
     background-color: black;
 }
 
-#logo{
+/* #logo{
     width:150px;
     height:45px;
-}
+} */
 
 .dropdown-toggle::after {
     color: #fff;
@@ -75,7 +75,7 @@ video{
     align-items: center;
     position: relative;
     max-width: 100%;
-    height: 610px;
+    height: 660px;
 }
 
 #banner-1 .content {
@@ -117,6 +117,7 @@ video{
 #banner-2 {
     flex-direction: column;
     gap: 30px;
+    overflow: hidden;
 }
 
 #banner-2 .content {
@@ -172,7 +173,7 @@ video{
     justify-content: center;
     align-items: center;
     height: fit-content;
-    height: 700px;
+    height: 730px;
     max-width: 100%;
     margin-top: 8rem;
 }
@@ -248,7 +249,7 @@ video{
     justify-content: center;
     align-items: center;
     height: fit-content;
-    height: 700px;
+    height: 730px;
     max-width: 100%;
     margin-top: 8rem;
 }
