--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -174,8 +174,9 @@
     display: flex;
     align-self: center;
     gap: 20px;
-    display: none;
-    pointer-events: none;
+    justify-content: end;
+    /* display: none; */
+    /* pointer-events: none; */
 }
 
 .buttons-for-self {
@@ -273,7 +274,7 @@
 
 /*RESPONSIVE*/
 
-@media (max-width:725px) {
+@media (max-width:750px) {
     .profile {
         justify-content: center;
         height: 270px;
@@ -313,7 +314,7 @@
 
 }
 
-@media (max-width:490px) {
+@media (max-width:510px) {
     .profile-nav {
         flex-direction: row !important;
         justify-content: center !important;
