--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -41,6 +41,11 @@ a {
     text-decoration: none;
 }
 
+.error{
+    color: red;
+    padding: 0 0 0 5px;
+}
+
 .background {
     position: fixed;
     width: 100%;
