--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -68,6 +68,13 @@ img {
   transition: background 0.5s ease;
 }
 
+.product-img img {
+  height: 100%;
+  width: 100%;
+  object-position: center;
+  object-fit: cover;
+}
+
 .product-btns {
   display: flex;
   justify-content: center;
@@ -75,6 +82,7 @@ img {
   opacity: 1;
   transition: opacity 0.6s ease;
 }
+
 .btn-cart,
 .btn-buy {
   background: transparent;
