--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,28 +1,14 @@
-@import url(global.css);
-
+/* @import url(global.css); */
 
 :root {
-    /* --main-color: #29a396; */
     --main-color:hsl(0,95%,65%);
     --primary-color: white;
 }
 
 body {
-    color: white;
+    color: #fff;
+    background-color: whitesmoke;
 }
-
-.header {
-    background-color: black;
-}
-
-.footer{
-    background-color: black;
-}
-
-/* #logo{
-    width:150px;
-    height:45px;
-} */
 
 .dropdown-toggle::after {
     color: #fff;
@@ -33,20 +19,6 @@ body {
     display: flex;
     margin-bottom: 5rem;
 }
-
-/* button{
-    background-color: var(--primary-color);
-    border: 2px solid var(--main-color);
-    outline: var(--main-color);
-    color:var(--main-color);
-}
-
-.banner-button button {
-    background-color: var(--main-color);
-    color: black;
-    width: fit-content;
-    font-weight: 600;
-} */
 
 .heading {
     text-align: center;
@@ -75,7 +47,7 @@ video{
     align-items: center;
     position: relative;
     max-width: 100%;
-    height: 660px;
+    height: 706px;
 }
 
 #banner-1 .content {
@@ -86,7 +58,6 @@ video{
     margin-bottom: 1rem;
     font-size: 2rem;
     font-weight: 700;
-    /* color: var(--main-color); */
 }
 
 #banner-1 .content h1 span {
@@ -158,8 +129,6 @@ video{
 }
 
 #banner-2 .banner-button button {
-    background-color: var(--main-color);
-    color: #111317;
     font-weight: 600;
     height: 45px;
     width: 150px;
@@ -220,16 +189,11 @@ video{
 }
 
 .trainer img {
-    /* border-top-left-radius: 80px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 80px;
-    border-bottom-left-radius: 8px; */
     border-radius: 10px;
     margin-bottom: 10px;
     max-width: 270px;
     max-height: 270px;
     overflow: hidden;
-    /* outline: 2px solid #fff; */
     outline: 1px solid black;
     padding: 2px;
     object-fit: cover;
@@ -298,7 +262,7 @@ video{
 
 #banner-6 .slider[data-animated="true"] .slide-track{
     flex-wrap: nowrap;
-    animation: scroll 20s linear infinite;
+    animation: scroll 25s linear infinite;
 }
 
 #banner-6 .slider .slide{
@@ -329,10 +293,6 @@ video{
 /* responsive */
 
 @media(max-width:910px) {
-    /* #banner-1{
-        margin-top: 4rem !important;
-    } */
-
     #banner-1 .content {
         width: 100%;
     }
@@ -366,9 +326,11 @@ video{
         line-height: 2rem;
         color: var(--white);
     }
+
     #banner-6 .slider[data-animated="true"] .slide-track{
         animation: scroll 17s linear infinite;
     }
+
     #banner-6 .slider .slide{
         padding-left:1rem;
         padding-right:1rem;
@@ -406,7 +368,7 @@ video{
     position: relative;
     transform: translateY(100px);
     opacity: 0;
-    transition: 1.5s all ease-in-out;
+    transition: 0.8s all ease-in-out;
 }
 
 .animate.show-animation {
