--- a/public/css/global.css
+++ b/public/css/global.css
@@ -13,6 +13,23 @@
 }
 
 /*-----------------------------------*\
+    # Custome Scrollbar
+\*-----------------------------------*/
+
+::-webkit-scrollbar {
+    width: 0px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: whitesmoke;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 10px;
+}
+
+/*-----------------------------------*\
     # Custom Variables & Classes
 \*-----------------------------------*/
 
