--- a/public/css/home.css
+++ b/public/css/home.css
@@ -189,13 +189,13 @@ video{
 }
 
 .trainer img {
-    border-radius: 10px;
+    border-radius: 20px;
     margin-bottom: 10px;
     max-width: 270px;
     max-height: 270px;
     overflow: hidden;
-    outline: 1px solid black;
-    padding: 2px;
+    border: 1px solid black;
+    /* padding: 2px; */
     object-fit: cover;
     object-position: center;
 }
