--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -5,6 +5,26 @@
     height:auto;
     padding-bottom:20px;
 }
+.post-img{
+    max-width:500px!important;
+}
+.post-video{
+    max-width:500px !important;
+}
+.post-img img {
+    display: block;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.post-video video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
 
 #success-message{
     font-size: 1.5rem;
