--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -156,6 +156,7 @@
     margin: 0 6px;
     z-index: 1;
     position: relative;
+    cursor: pointer;
 }
 
 .nav-item-links:before {
@@ -253,9 +254,6 @@
 
 /*EDIT SECTION*/
 .edit {
-    /* background-color: #1e293b; */
-    /* background-color: #28282b; */
-    /* background-color: #353935; */
     background-color: #343434;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
