Some CSS Change

--- a/public/css/message.css
+++ b/public/css/message.css
@@ -1,5 +1,5 @@
-body {
-    background-color: #f8f9fa;
+.activeChat {
+    background-color: #435f7a;
 }
 
 .chat-search-box {
@@ -44,12 +44,12 @@ body {
 .users-container {
     position: relative;
     padding: 1rem 0;
-    border-right: 1px solid #e6ecf3;
     height: 100%;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-direction: column;
     flex-direction: column;
+    background-color: #2c3e50;
+    color: #fff;
+    font-weight: 500;
 }
 
 .users {
@@ -63,29 +63,12 @@ body {
     width: 100%;
     padding: 10px 1rem;
     cursor: pointer;
-    border-bottom: 1px solid #f0f4f8;
+    margin-bottom: 0.4rem;
+    transition: 1s all ease;
 }
 
 .users .person:hover {
-    background-color: #ffffff;
-    /* Fallback Color */
-    background-image: -webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        from(#e9eff5),
-        to(#ffffff)
-    );
-    /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(right, #e9eff5, #ffffff);
-    /* Chrome 10+, Saf5.1+, iOS 5+ */
-    background-image: -moz-linear-gradient(right, #e9eff5, #ffffff);
-    /* FF3.6 */
-    background-image: -ms-linear-gradient(right, #e9eff5, #ffffff);
-    /* IE10 */
-    background-image: -o-linear-gradient(right, #e9eff5, #ffffff);
-    /* Opera 11.10+ */
-    background-image: linear-gradient(right, #e9eff5, #ffffff);
+    background-color: #435f7a;
 }
 
 .users .person.active-user {
@@ -114,17 +97,16 @@ body {
     border-bottom: 0;
 }
 
-.users .person .user {
+.user {
     display: inline-block;
     position: relative;
     margin-right: 10px;
 }
 
-.users .person .user img {
+.user img {
     width: 48px;
     height: 48px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
+    border: 2px solid #fff;
     border-radius: 50px;
 }
 
@@ -182,11 +164,7 @@ body {
     }
 }
 
-/************************************************
-	************************************************
-									Chat right side
-	************************************************
-************************************************/
+/* Chat Right Side */
 
 .selected-user {
     width: 100%;
@@ -210,6 +188,7 @@ body {
 .chat-container {
     position: relative;
     padding: 1rem;
+    background-color: #e6eaea;
 }
 
 .chat-box {
